stuf/src/p4/tests/t039.err
Semantic error on line 5: Object 'my_rectangle' does not contain the member variable 'apex'.
